[gd_scene load_steps=4 format=3]

[ext_resource type="Script" path="res://scenes/ui/selection_panel/character_upgrade.gd" id="1_upgrade"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bg"]
bg_color = Color(0.08, 0.08, 0.08, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_btn"]
bg_color = Color(0.18, 0.4, 0.28, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="CharacterUpgrade" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_bg")
script = ExtResource("1_upgrade")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 60
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 60
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="TopBar" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer/TopBar"]
custom_minimum_size = Vector2(140, 56)
layout_mode = 2
theme_override_font_sizes/font_size = 22
theme_override_styles/normal = SubResource("StyleBoxFlat_btn")
theme_override_styles/hover = SubResource("StyleBoxFlat_btn")
theme_override_styles/pressed = SubResource("StyleBoxFlat_btn")
text = "← 返回"

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer/TopBar"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 36
theme_override_colors/font_color = Color(0.95, 0.88, 0.55, 1)
text = "角色强化"
horizontal_alignment = 1

[node name="GoldContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/TopBar"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="GoldIcon" type="TextureRect" parent="MarginContainer/VBoxContainer/TopBar/GoldContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="GoldLabel" type="Label" parent="MarginContainer/VBoxContainer/TopBar/GoldContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
theme_override_colors/font_color = Color(1, 0.85, 0.15, 1)
text = "0"

[node name="CardsContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 40
alignment = 1
